[package]
name = "ankh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rocket = { version = "0.5.1", features = ["json"] }
shuttle-rocket = "0.56.0"
shuttle-runtime = "0.56.0"
teloxide = { version = "0.17.0", features = [
    "macros",
    "webhooks",
    "webhooks-axum",
] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
url = "2.5.7"
